--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Eddy3D Documentation
-site_url: https://eddy3d-dev.github.io/Docs/
-repo_url: https://github.com/Eddy3D-Dev/Docs/
+site_url: https://eddy3d-dev.github.io/Eddy3D-Documentation/
+repo_url: https://github.com/Eddy3D-Dev/Eddy3D-Documentation/
 # edit_uri: blob/main/docs/
 site_author: Patrick Kastner
 site_description: >-
