--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,14 +52,14 @@ theme:
         name: Switch to light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: black
+      primary: blue grey
       accent: black
       toggle:
         icon: material/toggle-switch
         name: Switch to dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: black
+      primary: blue grey
       accent: indigo
       toggle:
         icon: material/toggle-switch-off
