Added contact form

--- a/copilot-cli-mainline/mkdocs.yml
+++ b/copilot-cli-mainline/mkdocs.yml
@@ -13,6 +13,7 @@ extra_css:
 
 nav:
   - Home: index.md
+  - Contact: contact.md
   - Documentation:
     - Overview: docs/overview.en.md
     - Getting Started:
