--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Eddy3D Documentation
-site_url: https://docs.eddy3d.com/
-repo_url: # https://github.com/Eddy3D-Dev/Eddy3D-Documentation/
-edit_uri: ''
+site_url: https://docs.eddy3d.com
+repo_url: https://github.com/Eddy3D-Dev/Eddy3D-Documentation
+edit_uri: blob/main/docs/
 site_author: Patrick Kastner
 site_description: >-
   This is the Eddy3D documentation.
@@ -133,8 +133,7 @@ markdown_extensions:
 
 # Plugins
 plugins:
-  - search
-  #- title-casing
+  - title-casing
   - glightbox
   - git-revision-date-localized:
       type: timeago
@@ -166,7 +165,7 @@ plugins:
       exclude:
       #  - index.md
       enabled: true
-      enabled_on_serve: true
+      enabled_on_serve: false
       strict: true
   - search:
       separator: '[\s\u200b\-_,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
