--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Eddy3D
 site_description: 'Airflow and microclimate simulations for Rhino and Grasshopper'
-site_url: https://docs.eddy3d.com
-repo_url: https://github.com/Eddy3D-Dev/Eddy3D-Documentation
+site_url: https://eddy3d.com
+repo_url: https://github.com/Eddy3D-Dev/Eddy3D-Website
 edit_uri: blob/main/docs/
 site_author: Patrick Kastner
 copyright: 'Copyright &copy; 2018-2025 Eddy3D'
