--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,24 +12,21 @@ extra_css:
 nav:
   - Home: index.md
   - Download: download.md
-  - Documentation: "https://docs.eddy3d.com"
   - Support: support.md
   - Contact: contact.md
+  - Documentation: "https://docs.eddy3d.com"
 
 
 theme:
   name: material
   custom_dir: docs/overrides
   #font: false
-  icon:
-    logo: cd/favicon
-  favicon: cd/favicon
-  language: en
+  logo: assets/cd/favicon.svg
+  favicon: assets/cd/favicon.svg
   features:
     - tabs
     - instant
     - navigation.tabs
-        - announce.dismiss
     - content.action.edit
     - content.action.view
     - content.code.annotate
@@ -100,7 +97,6 @@ markdown_extensions:
 # Plugins
 plugins:
   # - mkdocs-video
-  - title-casing
   - glightbox:
       skip_classes:
         - skip-lightbox
@@ -138,8 +134,8 @@ plugins:
       enabled: true
       enabled_on_serve: false
       strict: true
-  - search:
-      separator: '[\s\u200b\-_,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
+  - search
+  - title-casing
 
   #- multirepo:
       # (optional) tells multirepo to cleanup the temporary directory after site is built.
