--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,8 @@ site_url: https://eddy3d.com
 repo_url: https://github.com/Eddy3D-Dev/Eddy3D-Website
 edit_uri: blob/main/docs/
 site_author: Patrick Kastner
-copyright: 'Copyright &copy; 2018-<script>document.write(new Date().getFullYear())</script> Eddy3D'
+copyright: >-
+  Copyright &copy; 2018-<script>document.write(new Date().getFullYear())</script> Eddy3D
 extra_css:
   - stylesheets/extra.css
 #extra: 
