--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -114,6 +114,7 @@ plugins:
         - contact.md
         - download.md
         - index.md
+        - support.md
       enabled: true
       strict: true
   - tags
@@ -133,7 +134,10 @@ plugins:
       authorship_threshold_percent: 1
       #ignore_commits: .git-blame-ignore-revs
       exclude:
-      #  - index.md
+        - contact.md
+        - download.md
+        - index.md
+        - support.md
       enabled: true
       enabled_on_serve: false
       strict: true
