--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ repo_url: https://github.com/Eddy3D-Dev/Eddy3D-Website
 edit_uri: blob/main/docs/
 site_author: Patrick Kastner
 copyright: >-
-  Copyright &copy; 2018-<script>document.write(new Date().getFullYear())</script> Eddy3D
+  Copyright &copy; 2018-2025 Eddy3D
 extra_css:
   - stylesheets/extra.css
 #extra: 
