--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,4 +38,5 @@ jobs:
       - run: pip install markdown-include
       - run: pip install mkdocs-video
       - run: pip install mkdocs-awesome-pages-plugin 
+      - run: pip install mkdocs-bibtex
       - run: echo 'www.eddy3d.com' > ./CNAME && mkdocs gh-deploy --force
