--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,8 +14,8 @@ nav:
   - Home: index.md
   - Download: download.md
   - Support: support.md
+  - Publications: publications.md
   - Documentation: "https://docs.eddy3d.com"
-
 
 theme:
   name: material
@@ -23,6 +23,8 @@ theme:
   #font: false
   logo: assets/cd/favicon.svg
   favicon: assets/cd/favicon.svg
+  icon:
+    annotation: material/plus-circle
   features:
     - tabs
     - instant
@@ -120,7 +122,7 @@ plugins:
       minify_html: true
       minify_js: true
       minify_css: true
-      htmlmin_opts:
+      htmlmin_opts: 
         remove_comments: true
   - git-authors:
       show_contribution: true
@@ -141,6 +143,10 @@ plugins:
       strict: true
   - search
   - title-casing
+  - bibtex: 
+      bib_file: https://raw.githubusercontent.com/SustainableUrbanSystemsLab/SustainableUrbanSystemsLab.github.io/refs/heads/main/_bibliography/papers.bib
+      csl_file: https://raw.githubusercontent.com/citation-style-language/styles/refs/heads/master/american-medical-association-no-url.csl # docs/citation-style-custom.csl
+      enable_inline_citations:  true
 
   #- multirepo:
       # (optional) tells multirepo to cleanup the temporary directory after site is built.
@@ -153,4 +159,6 @@ plugins:
         #- name: documentation
         #  import_url: https://github.com/Eddy3D-Dev/Eddy3D-Documentation/?branch=main
         #  imports: [/docs/*]
+
+
 
