--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,7 @@ jobs:
             mkdocs-material-
 
       - run: pip install mkdocs-material
+      - run: pip install pymdown-extensions
       - run: pip install mkdocs-multirepo-plugin
       - run: pip install mkdocs-git-revision-date-localized-plugin
       - run: pip install mkdocs-minify-plugin
