--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,9 +10,12 @@ extra_css:
   - stylesheets/extra.css
 #extra: 
 
+
+
 nav:
   - Home: index.md
   - Publications: publications.md
+  - Case Studies: case-studies/README.md
   - Download: download.md
   - Documentation: "https://docs.eddy3d.com"
   - Support: support.md
@@ -144,18 +147,13 @@ plugins:
       bib_file: https://raw.githubusercontent.com/SustainableUrbanSystemsLab/SustainableUrbanSystemsLab.github.io/refs/heads/main/_bibliography/papers.bib
       csl_file: https://raw.githubusercontent.com/citation-style-language/styles/refs/heads/master/american-medical-association-no-url.csl # docs/citation-style-custom.csl
       enable_inline_citations:  true
-
-  #- multirepo:
-      # (optional) tells multirepo to cleanup the temporary directory after site is built.
-  #    cleanup: false
-      # if set the docs directory will not be removed when importing docs. When using this with a nav section in an imported repo
-      # you must keep the docs directory in the path (e.g., docs/path/to/file.md).
-      #keep_docs_dir: true
-      #nav_repos:
-
-        #- name: documentation
-        #  import_url: https://github.com/Eddy3D-Dev/Eddy3D-Documentation/?branch=main
-        #  imports: [/docs/*]
+  - multirepo:
+      cleanup: false
+      keep_docs_dir: true
+      nav_repos:
+        - name: Case Studies
+          import_url: https://github.com/Eddy3D-Dev/Eddy3D-CaseStudies/?branch=main
+          imports: [/*]
 
 
 
