--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
-name: ci 
+name: ci
 on:
   push:
     branches:
-      - master 
+      - master
       - main
 permissions:
   contents: write
@@ -28,11 +28,16 @@ jobs:
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
 
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: '3.x'
+          cache: 'pip'
+          cache-dependency-path: requirements.txt
 
-      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
+      - name: Install Python dependencies
+        run: pip install -r requirements.txt
+
+      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
 
       - uses: actions/cache@v3
         with:
@@ -40,20 +45,6 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-
-      - run: pip install mkdocs-material
-      - run: pip install pymdown-extensions
-      - run: pip install mkdocs-multirepo-plugin
-      - run: pip install mkdocs-git-revision-date-localized-plugin
-      - run: pip install mkdocs-minify-plugin
-      - run: pip install mkdocs-git-authors-plugin
-      - run: pip install mkdocs-git-committers-plugin-2
-      - run: pip install mkdocs-title-casing-plugin
-      - run: pip install mkdocs-glightbox
-      - run: pip install markdown-include
-      - run: pip install mkdocs-video
-      - run: pip install mkdocs-awesome-pages-plugin 
-      - run: pip install mkdocs-bibtex
 
       - name: Build & Deploy
         run: |
