--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: Eddy3D
 site_description: 'Airflow and microclimate simulations for Rhino and Grasshopper'
 site_url: https://eddy3d.com
-repo_url: https://github.com/Eddy3D-Dev/Eddy3D-Website
-edit_uri: blob/main/docs/
+# repo_url: https://github.com/Eddy3D-Dev/Eddy3D-Website
+# edit_uri: blob/main/docs/
 site_author: Patrick Kastner
 copyright: >-
   Copyright &copy; 2018-2025 Eddy3D
