--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -102,6 +102,8 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.magiclink:
+      social_url_shorthand: true   # @user -> https://github.com/user
 
 # Plugins
 plugins:
