--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,8 @@
 site_name: Eddy3D
 site_description: 'Airflow and microclimate simulations for Rhino and Grasshopper'
 site_url: https://eddy3d.com
+# Netlify build env doesn't support multiprocessing semaphores used by mkdocs plugins.
+enable_parallel_processing: false
 # repo_url: https://github.com/Eddy3D-Dev/Eddy3D-Website
 # edit_uri: blob/main/docs/
 site_author: Patrick Kastner
